<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QuickResponseApp</string>
    <string name="select_language">SELECT LANGUAGE</string>
    <string name="back">Back</string>
    <string name="what_language">What language do you speak?</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="edit_contacts">EDIT CONTACTS</string>

    <!--Global action bar -->
    <string name ="QRA">Quick Response App</string>

    <!-- Home Page -->
    <string name="greeting_kauri">Kia ora! Im Kauri the Kākāpō!\nHow are you?</string>
    <string name="help_prompt">Dont know? You can talk to me\nand I can help</string>
    <string name="talk_to_kauri">Talk to Kauri</string>
    <string name="messages">Messages</string>
    <string name="contacts">Contacts</string>

    <!-- pop out menu -->
    <string name="Pop_out_edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="about_kauri">About Kauri</string>
    <string name="home">Home</string>

    <!-- About Kauri -->
    <string name="about">Kauri the Kākāpō is more than just a mascot, he’s your friendly helper and protector.\n\n Kauri grew up in a big, safe forest where all the birds looked after each other. One day, he heard about kids\n who were feeling scared or alone, and he knew he had to help.\n\n Now, Kauri flies into your phones to be by your side. He listens when you want to talk, shows you how to stay safe, and reminds you that you’re never alone.\n\n Kauri might be small, but his heart is strong and brave, <b> just like you.</b> If you ever need someone to talk to or help you find a safe path, Kauri is here for you.</string>

    <!-- Disclaimer -->
    <string name="disclaimer_title">DISCLAIMER</string>
    <string name="accept">ACCEPT</string>
    <string name="disclaimer"> This app is a prototype developed for educational purposes as part of a student project in collaboration with AWAI. It is not an official emergency service, nor is it intended to replace professional help or legal guidance.\n\nAll contact names, profiles, and data used in this app are simulated for demonstration purposes only. This app is not live or fully functional.\n\nFeedback gathered from this prototype will help guide future development.</string>
    <string name="langselect">TE REO MAORI</string>

    <!-- Contacts -->
    <string name="empty_contacts_placeholder">Click the plus to add a contact</string>
    <string name="default_contact_star">★ DEFAULT</string>
    <string name="edit_contact">EDIT CONTACT</string>
    <string name="hint_phone_number">PHONE NUMBER</string>
    <string name="hint_relationship">RELATIONSHIP</string>
    <string name="text_oranga_tamariki">IS THIS PERSON APPOINTED BY ORANGA TAMARIKI?</string>
    <string name="text_set_default_contact">SET AS DEFAULT CONTACT?</string>
    <string name="text_delete">DELETE</string>
    <string name="text_address">ADDRESS</string>
    <string name="text_oranga_certified">THIS PERSON IS ORANGA TAMARIKI CERTIFIED</string>
    <string name="text_default_contact">THIS PERSON IS THE DEFAULT CONTACT</string>
    <string name="text_edit">EDIT</string>
    <string name="add_contact">ADD CONTACT</string>

    <!-- Messages -->
    <string name="empty_messages_placeholder">Add contacts to message someone!</string>
    <string name="message_all">MESSAGE ALL</string>

    <!-- Profile/Contact -->
    <string name="tap_to_upload_photo">Tap image to upload photo</string>
    <string name="registration_title">REGISTRATION</string>
    <string name="hint_name">NAME</string>
    <string name="hint_birthday">BIRTHDAY (DD/MM/YYYY)</string>
    <string name="hint_address">CURRENT ADDRESS</string>
    <string name="label_guardian">CURRENT CAREGIVER</string>
    <string name="hint_guardian_name">NAME</string>
    <string name="hint_guardian_phone">PHONE NUMBER</string>
    <string name="label_oranga_check">IS THIS PERSON APPOINTED BY ORANGA TAMARIKI?</string>
    <string name="button_save">SAVE</string>

    <!-- Quiz -->
    <string name="ka_pai_brave">Ka Pai! You\'re so brave!</string>
    <string name="results_title">Here\'s your results</string>
    <string name="results_placeholder">Results here...</string>
    <string name="dynamic_message_placeholder">Dynamic message here</string>
    <string name="yes_button">YES</string>
    <string name="no_button">NO</string>
    <string name="question_are_you_safe">Are you safe?</string>
    <string name="question_are_you_hurt">Are you hurt?</string>
    <string name="question_do_you_feel_scared">Do you feel scared?</string>
    <string name="question_want_to_talk">Do you want to talk to someone?</string>
    <string name="question_talk_to_police">Do you want to talk to the Police?</string>
    <string name="question_talk_to_ambulance">Do you want to talk to the Ambulance?</string>
    <string name="question_me_call_police">Do you want me to call the Police?</string>
    <string name="question_me_call_ambulance">Do you want me to call the Ambulance?</string>
    <string name="question_talk_to_someone_else">Do you want to talk to someone else?</string>
    <string name="result_message_support">I heard you and I\'ve told the people who need to know!</string>
    <string name="result_message_default">We know you might be scared right now, so I\'ve let your contacts know how you feel!</string>

    <!-- Emergency Page -->
    <string name="who_do_you_want_to_call">Who do you want to call?</string>
    <string name="police">POLICE</string>
    <string name="ambulance">AMBULANCE</string>
    <string name="talk_to_contact">TALK TO CONTACT</string>
    <string name="talk_to_someone_for_you">Do you want me to talk to someone for you?</string>
    <string name="kauri_talks_to_police">KAURI TALKS TO POLICE</string>
    <string name="kauri_talks_ambulance">KAURI TALKS AMBULANCE</string>
    <string name="kauri_talks_to_guardian">KAURI TALKS TO CONTACT</string>
    <string name="title_home">Home</string>
</resources>
