<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundphoto"
    tools:context="com.example.quickresponseapp.contacts.AddContactFragment">


    <!-- ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:orientation="vertical">

            <!-- Back Button -->
            <TextView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:layout_margin="16dp"
                android:clickable="true"
                android:drawablePadding="8dp"
                android:focusable="true"
                android:text="@string/back"
                android:textColor="#dda036"
                android:textSize="18sp" />


            <!-- Contact Picture -->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/contact_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/kaurihead"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="6dp"
                app:civ_border_width="3dp"
                app:civ_border_color="@color/mustard"/>

            <!-- Instruction -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tap_to_upload_photo"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"/>

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/add_contact"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Input Fields -->
            <EditText
                android:id="@+id/add_contactname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_name"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="#9E9E9E"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/add_contactphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="#9E9E9E"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/add_contactaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/text_address"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="#9E9E9E"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/add_contactrelationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_relationship"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="#9E9E9E"
                android:textSize="16sp" />

            <!-- Checkboxes -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox_oranga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_oranga_tamariki" />

                <CheckBox
                    android:id="@+id/checkbox_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_set_default_contact" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Emergency Button -->
    <ImageButton
        android:id="@+id/emergency_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="bottom|start"
        android:layout_margin="24dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/emergencybutton" />

    <!-- Save Button -->
    <Button
        android:id="@+id/button_save"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/mustard"
        android:text="@string/button_save"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>