<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundphoto"
    android:padding="16dp"
    tools:context="com.example.quickresponseapp.contacts.EditContactFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="90dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!-- Back Button -->
            <TextView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:layout_margin="16dp"
                android:clickable="true"
                android:drawablePadding="8dp"
                android:focusable="true"
                android:text="@string/back"
                android:textColor="@color/mustard"
                android:textSize="18sp" />

            <!-- Update contact picture -->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/contact_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:contentDescription="Contact Image"
                android:focusable="true"
                android:padding="6dp"
                android:src="@drawable/kaurihead"
                app:civ_border_color="@color/mustard"
                app:civ_border_width="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/tap_to_upload_photo"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <!-- Page Title -->
            <TextView
                android:id="@+id/text_heading_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/edit_contact"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Update Name -->
            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_name"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="#9E9E9E"
                android:textSize="16sp" />

            <!-- Update Address -->
            <EditText
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_address"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="#9E9E9E"
                android:textSize="16sp" />

            <!-- Update Phone number -->
            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="#9E9E9E"
                android:textSize="16sp" />

            <!-- Update Relation -->
            <EditText
                android:id="@+id/edit_relationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_relationship"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="#9E9E9E"
                android:textSize="16sp" />

            <!-- Checkboxes -->
            <CheckBox
                android:id="@+id/checkbox_oranga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/text_oranga_tamariki" />

            <CheckBox
                android:id="@+id/checkbox_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_set_default_contact" />

            <!-- Save and Delete Button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/mustard"
                    android:text="@string/button_save"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/mustard"
                    android:text="@string/text_delete"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!-- Emergency Call Button -->
    <ImageButton
        android:id="@+id/emergency_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="bottom|start"
        android:layout_margin="24dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/emergencybutton" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>