<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/disclaimerScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/fullbackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/warningImage"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/kauriwarning" />

        <TextView
            android:id="@+id/disclaimerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer_title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/disclaimerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"
            android:textSize="18sp"
            android:textColor="#333"
            android:lineSpacingExtra="4dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            android:weightSum="2">

            <Button
                android:id="@+id/translateButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/mustard"
                android:text="@string/langselect"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/acceptButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/mustard"
                android:text="@string/accept"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
