<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fullbackground">

    <ImageView
        android:id="@+id/warningImage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/kauriwarning"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/disclaimerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disclaimer_title"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@id/warningImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/disclaimerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/disclaimer"
        android:textSize="18sp"
        android:textColor="#333"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/disclaimerTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/acceptButton"
        android:gravity="center"
        android:lineSpacingExtra="4dp" />

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#D9A138"
        android:text="@string/accept"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/translateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#63D938"
        android:text="@string/langselect"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
